# bi83-kit

./: Cargo.toml  README.md
docs/: AI-INSTRUCTIONS.md  API.md
src/: lib.rs
